<resources>
    <string name="app_name">Score Keeper</string>
    <string name="title">Football Score Keeper</string>
    <string name="reset">Reset/New Game</string>
    <string name="initial_score">00</string>
    <string name="touchdown">Touchdown</string>
    <string name="field_goal">Field Goal</string>
    <string name="extra_point">Extra Point</string>
    <string name="went_for_two">Went For Two</string>
    <string name="touch_back">Touch Back</string>
    <string name="team_red">Team Red</string>
    <string name="team_blue">Team Blue</string>
    <string name="missed_extra">Missed Extra Point</string>
    <string name="red_helmet_logo_description">Red Helmet logo</string>
    <string name="blue_helmet_logo_description">Blue Helmet logo</string>
</resources>
