<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/footballGreen"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:textSize="36sp"
        android:textColor="@android:color/background_light"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/red_helmet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="36sp"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                android:text="@string/team_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="100sp"
                android:textColor="@android:color/background_light"
                android:text="@string/initial_score"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginBottom="16dp"
                android:text="@string/field_goal"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@android:color/background_light"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/touchdown"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@android:color/background_light"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/extra_point"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@android:color/background_light"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/went_for_two"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/blue_helmet"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="36sp"
                android:textColor="@color/team_blue"
                android:textStyle="bold"
                android:text="@string/team_2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/background_light"
                android:textSize="100sp"
                android:text="@string/initial_score"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@android:color/background_light"
                android:textColor="@color/team_blue"
                android:text="@string/field_goal"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@android:color/background_light"
                android:textColor="@color/team_blue"
                android:text="@string/touchdown"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@android:color/background_light"
                android:textColor="@color/team_blue"
                android:text="@string/extra_point"/>

            <Button
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@android:color/background_light"
                android:textColor="@color/team_blue"
                android:text="@string/went_for_two"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/background_light"
        android:text="@string/reset"/>

</LinearLayout>